feat: add require

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <form>
       <label for="celcius">Masukan suhu celcius</label>
-      <input type="number" name="celcius" id="celcius" />
+      <input type="number" name="celcius" id="celcius" required />
       <button type="submit">Submit</button>
     </form>
 
